update hari selesa

--- a/TODO
+++ b/TODO
@@ -1,15 +1,18 @@
 #TODO Utama 
-[] buat input untuk biro, dengan dua waktu pilihan jadwal (tanggal,bulan,tahun,jam & tempat)
 [] buat validasi konselor ketika siapa yg klik approve akan menjadi penanggung jawab
+[] mahasiswa pilih waktu dan tempat untuk konseling
+[] update data tabel pada detail-konseling.html, tampilkan data jadwal-satu,jadwal-dua,lokasi-satu,lokasi-dua
 [] button lanjutkan ke dosen dan dosen menerima data
 [] kirim ke dosen pembimbing sesuai dengan data mahasiswa pada halaman -detail pengajuan-
 [] button print untuk mencetak data laporan konseling
 [] pada detail pengajuan untuk isi data dikirim-ke bisa di isi data masih kosong karna belum di update oleh konselor
 
 #NOTE SELESAI
-[x] ambil data berdasarkan id mahasiswa yang melapor untuk user mahasiswa
+[x] buat input untuk biro, dengan dua waktu pilihan jadwal (tanggal,bulan,tahun,jam & tempat)
+[x] ambil data berdasarkan 'id' mahasiswa yang melapor untuk user mahasiswa
 [x] buat middleware sesuaikan siapa yg login
-[x] buat search by pk in pengajuan konseling berdasarkan siapa yg login
-[x] set dom profile yang login pada halaman detail konseling
+[x] buat search by pk di pengajuan konseling berdasarkan siapa yg login
+[x] atur dom profile yang login pada halaman detail konseling
 [x] button cancel untuk menghapus konseling
+[x] fitur logout
 [x] https://react-free-admin-dashboard-template.netlify.app/module/toastr buat notifikasi
