--- a/TODO
+++ b/TODO
@@ -1,13 +1,13 @@
 #TODO Utama 
-[] buat validasi konselor ketika siapa yg klik approve akan menjadi penanggung jawab
 [] mahasiswa pilih waktu dan tempat untuk konseling
-[] update data tabel pada detail-konseling.html, tampilkan data jadwal-satu,jadwal-dua,lokasi-satu,lokasi-dua
 [] button lanjutkan ke dosen dan dosen menerima data
 [] kirim ke dosen pembimbing sesuai dengan data mahasiswa pada halaman -detail pengajuan-
 [] button print untuk mencetak data laporan konseling
-[] pada detail pengajuan untuk isi data dikirim-ke bisa di isi data masih kosong karna belum di update oleh konselor
+[x] pada detail pengajuan untuk isi data dikirim-ke bisa di isi data masih kosong karna belum di update oleh konselor
+[] buat validasi konselor ketika siapa yg klik approve akan menjadi penanggung jawab
 
 #NOTE SELESAI
+[x] update data tabel pada detail-konseling.html, tampilkan data jadwal-satu,jadwal-dua,lokasi-satu,lokasi-dua
 [x] buat input untuk biro, dengan dua waktu pilihan jadwal (tanggal,bulan,tahun,jam & tempat)
 [x] ambil data berdasarkan 'id' mahasiswa yang melapor untuk user mahasiswa
 [x] buat middleware sesuaikan siapa yg login
